; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_opus_rc.c_ff_opus_rc_enc_laplace.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_opus_rc.c_ff_opus_rc_enc_laplace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_opus_rc_enc_laplace(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %9, align 4
  store i32 1, i32* %10, align 4
  %15 = load i32*, i32** %6, align 8
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @FFABS(i32 %16)
  store i32 %17, i32* %11, align 4
  %18 = load i32*, i32** %6, align 8
  %19 = load i32, i32* %18, align 4
  %20 = icmp sgt i32 %19, 0
  %21 = zext i1 %20 to i32
  store i32 %21, i32* %12, align 4
  %22 = load i32, i32* %11, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %28, label %24

24:                                               ; preds = %4
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @opus_rc_enc_update(i32* %25, i32 0, i32 %26, i32 32768, i32 1)
  br label %107

28:                                               ; preds = %4
  %29 = load i32, i32* %7, align 4
  %30 = sub nsw i32 32736, %29
  %31 = load i32, i32* %8, align 4
  %32 = sub nsw i32 16384, %31
  %33 = mul nsw i32 %30, %32
  %34 = ashr i32 %33, 15
  store i32 %34, i32* %7, align 4
  br label %35

35:                                               ; preds = %54, %28
  %36 = load i32, i32* %10, align 4
  %37 = load i32, i32* %11, align 4
  %38 = icmp slt i32 %36, %37
  br i1 %38, label %39, label %42

39:                                               ; preds = %35
  %40 = load i32, i32* %7, align 4
  %41 = icmp ne i32 %40, 0
  br label %42

42:                                               ; preds = %39, %35
  %43 = phi i1 [ false, %35 ], [ %41, %39 ]
  br i1 %43, label %44, label %57

44:                                               ; preds = %42
  %45 = load i32, i32* %7, align 4
  %46 = shl i32 %45, 1
  %47 = add nsw i32 %46, 2
  %48 = load i32, i32* %9, align 4
  %49 = add nsw i32 %48, %47
  store i32 %49, i32* %9, align 4
  %50 = load i32, i32* %7, align 4
  %51 = load i32, i32* %8, align 4
  %52 = mul nsw i32 %50, %51
  %53 = ashr i32 %52, 14
  store i32 %53, i32* %7, align 4
  br label %54

54:                                               ; preds = %44
  %55 = load i32, i32* %10, align 4
  %56 = add nsw i32 %55, 1
  store i32 %56, i32* %10, align 4
  br label %35

57:                                               ; preds = %42
  %58 = load i32, i32* %7, align 4
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %67

60:                                               ; preds = %57
  %61 = load i32, i32* %7, align 4
  %62 = add nsw i32 %61, 1
  store i32 %62, i32* %7, align 4
  %63 = load i32, i32* %12, align 4
  %64 = mul nsw i32 %62, %63
  %65 = load i32, i32* %9, align 4
  %66 = add nsw i32 %65, %64
  store i32 %66, i32* %9, align 4
  br label %100

67:                                               ; preds = %57
  %68 = load i32, i32* %11, align 4
  %69 = load i32, i32* %10, align 4
  %70 = sub nsw i32 %68, %69
  %71 = load i32, i32* %9, align 4
  %72 = sub nsw i32 32768, %71
  %73 = load i32, i32* %12, align 4
  %74 = icmp ne i32 %73, 0
  %75 = xor i1 %74, true
  %76 = zext i1 %75 to i32
  %77 = sub nsw i32 %72, %76
  %78 = ashr i32 %77, 1
  %79 = sub nsw i32 %78, 1
  %80 = call i8* @FFMIN(i32 %70, i32 %79)
  %81 = ptrtoint i8* %80 to i32
  store i32 %81, i32* %13, align 4
  %82 = load i32, i32* %12, align 4
  %83 = load i32, i32* %13, align 4
  %84 = shl i32 %83, 1
  %85 = add nsw i32 %82, %84
  %86 = load i32, i32* %9, align 4
  %87 = add nsw i32 %86, %85
  store i32 %87, i32* %9, align 4
  %88 = load i32, i32* %9, align 4
  %89 = sub nsw i32 32768, %88
  %90 = call i8* @FFMIN(i32 1, i32 %89)
  %91 = ptrtoint i8* %90 to i32
  store i32 %91, i32* %7, align 4
  %92 = load i32*, i32** %6, align 8
  %93 = load i32, i32* %92, align 4
  %94 = call i32 @FFSIGN(i32 %93)
  %95 = load i32, i32* %13, align 4
  %96 = load i32, i32* %10, align 4
  %97 = add nsw i32 %95, %96
  %98 = mul nsw i32 %94, %97
  %99 = load i32*, i32** %6, align 8
  store i32 %98, i32* %99, align 4
  br label %100

100:                                              ; preds = %67, %60
  %101 = load i32*, i32** %5, align 8
  %102 = load i32, i32* %9, align 4
  %103 = load i32, i32* %9, align 4
  %104 = load i32, i32* %7, align 4
  %105 = add nsw i32 %103, %104
  %106 = call i32 @opus_rc_enc_update(i32* %101, i32 %102, i32 %105, i32 32768, i32 1)
  br label %107

107:                                              ; preds = %100, %24
  ret void
}

declare dso_local i32 @FFABS(i32) #1

declare dso_local i32 @opus_rc_enc_update(i32*, i32, i32, i32, i32) #1

declare dso_local i8* @FFMIN(i32, i32) #1

declare dso_local i32 @FFSIGN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
